--- a/cell02/ex01/menu.css
+++ b/cell02/ex01/menu.css
@@ -1,5 +1,7 @@
 body {
 	background-color: #0088ce;
+	margin: 0;
+	padding: 0;
 }
 
 .header {
@@ -8,6 +10,7 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
+	height: 20%;
 }
 
 h1 {
@@ -18,12 +21,28 @@ h1 {
 
 .logo {
 	width: 10rem;
+	margin: 1rem;
+}
 
+.main-section {
+	position: absolute;
+	top: 20%;
+	height: 80%;
+	background-color: #40aee5;
+	width: 100%;
+	border-collapse: collapse;
 }
 
 .menu {
-	background-color: #40aee5;
 	display: flex;
 	margin: 2rem;
 	justify-content: center;
+}
+
+.menu-prompt {
+	margin-right: 1rem;
+}
+
+.drop-down-list {
+	
 }
