--- a/cell02/ex02/parallax.css
+++ b/cell02/ex02/parallax.css
@@ -59,7 +59,7 @@ html {
 	justify-content: center;
 }
 
-.msg-block-1 {
+.msg-block {
 	background-color: black;
 	color: white;
 	font-weight: bold;
