--- a/rush/cv.css
+++ b/rush/cv.css
@@ -5,6 +5,9 @@ html, body {
 	padding: 0;
 }
 
+html {
+	scroll-behavior: smooth;
+}
 body {
 	scroll-behavior: smooth;
 }
@@ -37,7 +40,6 @@ footer {
 }
 
 .mababou_content {
-	background-color: lightblue;
 	height: 100%;
 	padding-top: 56px; /* avoid collision with navbar */
 }
@@ -68,7 +70,7 @@ footer {
 	display: flex;
 	opacity: 100%;
 	flex-direction: column;
-	background-color: white;
+	background-color: rgb(255, 255, 255);
 	opacity: 0.8;
 	padding: 3%;
 	border-radius: 10px;
@@ -84,7 +86,7 @@ footer {
 .link {
 	border-radius: 10px;
 	border: solid 2px black;
-	background-color: rgb(233, 231, 231);
+	background-color: rgb(231, 233, 233);
 	box-shadow: 2px 2px 4px;
 	padding: 5px;
 	margin-top: 4%;
@@ -100,4 +102,44 @@ footer {
 hr {
 	padding: 0;
 	margin: 0;
+}
+
+.nav-item-space {
+	margin: 10%;
+}
+
+
+/* CLASSES INSIDE THE PERSONAL PAGES */
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -56px;
+    visibility: hidden;
+}
+
+.section {
+	height: 100%;
+	padding: 56px 2% 2% 2%; /* avoid collision with navbar */
+}
+
+
+/* ABOUT */
+.about {
+	background-color: white;
+}
+
+.about>h1 {
+	font-size: 200%;
+	color: darkblue;
+	font-weight: bolder;
+	font-family: "Raleway", sans-serif;
+}
+
+.resume {
+	background-color: lightgray;
+}
+
+.contact {
+	background-color: white;
 }
