--- a/rush/cv.css
+++ b/rush/cv.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	height: 100%;
 	width: 100%;
 	margin: 0;
@@ -8,6 +9,7 @@ html, body {
 html {
 	scroll-behavior: smooth;
 }
+
 body {
 	scroll-behavior: smooth;
 }
@@ -35,13 +37,15 @@ footer {
 
 .mriant_content {
 	height: 100%;
-	padding-top: 56px; /* avoid collision with navbar */
+	padding-top: 56px;
+	/* avoid collision with navbar */
 	background-color: orange;
 }
 
 .mababou_content {
 	height: 100%;
-	padding-top: 56px; /* avoid collision with navbar */
+	padding-top: 56px;
+	/* avoid collision with navbar */
 }
 
 .default {
@@ -49,14 +53,14 @@ footer {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	
+
 }
 
 .overlay {
 	background-color: rgb(40, 211, 197, 0.5);
 	background-size: cover;
 	background-position: center;
-	
+
 	height: 100%;
 	width: 100%;
 
@@ -104,7 +108,7 @@ hr {
 	margin: 0;
 }
 
-.nav-item-space {
+* .nav-item-space {
 	margin: 10%;
 }
 
@@ -112,21 +116,27 @@ hr {
 /* CLASSES INSIDE THE PERSONAL PAGES */
 
 a.anchor {
-    display: block;
-    position: relative;
-    top: -56px;
-    visibility: hidden;
+	display: block;
+	position: relative;
+	top: -56px;
+	visibility: hidden;
 }
 
 .section {
 	height: 100%;
-	padding: 56px 2% 2% 2%; /* avoid collision with navbar */
+	padding: 56px 2% 2% 2%;
+	/* avoid collision with navbar */
 }
 
 
-/* ABOUT */
+/* ABOUT - MABABOU */
 .about {
 	background-color: white;
+}
+
+.profile-picture {
+	border-radius: 50%;
+	width: 30%;
 }
 
 .about>h1 {
@@ -136,9 +146,121 @@ a.anchor {
 	font-family: "Raleway", sans-serif;
 }
 
-.resume {
-	background-color: lightgray;
+.about>section {
+	padding: 10%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
 }
+
+.mababou-name {
+	padding-top: 1%;
+	font-size: 300%;
+	font-weight: 900;
+	text-align: center;
+}
+
+.about>section>h2 {
+	text-align: center;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	padding: 1%;
+}
+
+.about>section>h3 {
+	text-align: center;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	padding: 1%;
+}
+
+.about>section>h4 {
+	text-align: center;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	padding: 1%;
+	font-size: 200%;
+	color: darkblue;
+}
+
+/* RESUME - MABABOU */
+
+.resume {
+	background-color: rgb(197, 221, 246);
+}
+
+.resume>h1 {
+	font-size: 200%;
+	color: darkblue;
+	font-weight: bolder;
+	font-family: "Raleway", sans-serif;
+}
+
+.resume>section {
+	padding: 10%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
+.resume>section>h2 {
+	text-align: center;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: bold;
+	padding: 1%;
+}
+
+.skill {
+	margin: 5%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.lang-logo {
+	width: 15%;
+}
+
+/* Make sure that padding behaves as expected */
+* {
+	box-sizing: border-box
+}
+
+/* Container for skill bars */
+.container-skill {
+	width: 100%;
+	/* Full width */
+	background-color: #ddd;
+	/* Grey background */
+	margin: 2%;
+}
+
+.skills {
+	text-align: right;
+	/* Right-align text */
+	padding-top: 10px;
+	/* Add top padding */
+	padding-bottom: 10px;
+	/* Add bottom padding */
+	color: white;
+	/* White text color */
+	font-weight: bold;
+	
+	
+	padding: 1%;
+
+}
+
+.html {
+	width: 90%;
+	background-color: #6399D4;
+}
+
+/* Green */
+
+/* CONTACT - MABABOU */
 
 .contact {
 	background-color: white;
