--- a/rush/cv.css
+++ b/rush/cv.css
@@ -37,7 +37,8 @@ footer {
 
 .mriant_content {
 	height: 100%;
-	padding-top: 56px; /* avoid collision with navbar */
+	padding-top: 56px;
+	/* avoid collision with navbar */
 	background-color: white;
 }
 
@@ -135,7 +136,7 @@ a.anchor {
 
 .profile-picture {
 	border-radius: 50%;
-	width: 30%;
+	width: 20%;
 }
 
 .about>h1 {
@@ -152,6 +153,7 @@ a.anchor {
 	justify-content: center;
 	align-items: center;
 	align-content: center;
+	height: 80%;
 }
 
 .mababou-name {
@@ -195,6 +197,7 @@ a.anchor {
 }
 
 .resume>section {
+	height: 50%;
 	padding: 10%;
 	display: flex;
 	flex-direction: column;
@@ -203,7 +206,7 @@ a.anchor {
 	align-content: center;
 }
 
-.resume>section>h2 {
+.resume>.resume-blocks>section>h2 {
 	text-align: center;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-weight: bold;
@@ -218,13 +221,24 @@ a.anchor {
 	align-items: center;
 }
 
+.section>.resume-blocks {
+	display: flex;
+	flex-direction: row;
+	padding: 2%;
+}
+
+.section>.resume-blocks>* {
+	flex: 1;
+}
+
 .lang-logo {
 	width: 15%;
+	border-radius: 50%;
 }
 
 /* Make sure that padding behaves as expected */
 * {
-	box-sizing: border-box
+	box-sizing: border-box;
 }
 
 /* Container for skill bars */
@@ -246,24 +260,140 @@ a.anchor {
 	color: white;
 	/* White text color */
 	font-weight: bold;
-	
-	
+
+
 	padding: 1%;
 
 }
 
-.html {
+.cpp-mababou {
 	width: 90%;
 	background-color: #6399D4;
 }
 
-/* Green */
+.js-mababou {
+	width: 40%;
+	background-color: #E4BA42;
+}
+
+.bash-mababou {
+	width: 70%;
+	background-color: #0d0b07;
+}
+
+.docker-mababou {
+	width: 50%;
+	background-color: #006BC0;
+}
+
+.ts-mababou {
+	width: 50%;
+	background-color: #0078CF;
+}
+
+
+.mababou-exp {
+	margin: 5%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.mababou-exp-content {
+	margin: 5%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 30%;
+	text-align: center;
+}
+
+
+
 
 /* CONTACT - MABABOU */
 
 .contact {
 	background-color: white;
 }
+
+.contact>h1 {
+	font-size: 200%;
+	color: darkblue;
+	font-weight: bolder;
+	font-family: "Raleway", sans-serif;
+}
+
+.contact>section>h2 {
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 200%;
+	padding: 1%;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text],
+select,
+textarea {
+	width: 100%;
+	/* Full width */
+	padding: 12px;
+	/* Some padding */
+	border: 1px solid #ccc;
+	/* Gray border */
+	border-radius: 4px;
+	/* Rounded borders */
+	box-sizing: border-box;
+	/* Make sure that padding and width stays in place */
+	margin-top: 6px;
+	/* Add a top margin */
+	margin-bottom: 16px;
+	/* Bottom margin */
+	resize: vertical
+		/* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+	background-color: rgb(39, 66, 94);
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+	background-color: rgb(132, 149, 168);
+}
+
+/* Add a background color and some padding around the form */
+.contact-container {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
+}
+
+.network-logo {
+	width: 50%;
+	margin: 10px;
+}
+
+.network-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+
+.network-container>a {
+	width: 25%;
+	max-width: 200px;
+	display:flex;
+	justify-content: center;
+}
+
+
 
 /* MRIANT */
 
